// Voting Logic Contract

// =================================================================
// ALPHA SOVEREIGN ORGANISM - SWARM CONSENSUS PROTOCOL
// =================================================================
// File: schemas/proto/swarm_consensus.proto
// Status: PRODUCTION (Democratic Logic)
// Pillar: Governance & Decision Making (الركيزة: الحوكمة واتخاذ القرار)
// Forensic Purpose: تحديد آلية حل النزاعات بين الوكلاء الرقميين عبر التصويت المرجح.
// =================================================================

syntax = "proto3";

package alpha.swarm.v1;

// خيارات اللغة لتوليد الأكواد
option java_multiple_files = true;
option go_package = "github.com/alpha/swarm/consensus";

// -----------------------------------------------------------------
// 1. تعريف الخدمة (SERVICE DEFINITION)
// -----------------------------------------------------------------
// هذه الخدمة تدير "غرفة الاجتماعات" حيث يطرح الوكلاء الاقتراحات ويصوتون عليها.

service ConsensusEngine {
  // طرح اقتراح جديد للتصويت (مثلاً: "هل ندخل صفقة شراء BTC؟").
  rpc SubmitProposal (ProposalRequest) returns (ProposalResponse);

  // إدلاء الوكيل بصوته على اقتراح قائم.
  rpc CastVote (VoteRequest) returns (VoteAck);

  // معرفة النتيجة النهائية للاقتراح (هل تم التوافق؟).
  rpc GetFinalVerdict (VerdictRequest) returns (VerdictResponse);
}

// -----------------------------------------------------------------
// 2. رسائل الاقتراح (PROPOSAL MESSAGES)
// -----------------------------------------------------------------

message ProposalRequest {
  // معرف التتبع للعملية الأصلية.
  string trace_id = 1;

  // الوكيل الذي طرح الاقتراح (مثلاً: "Quant_Agent_01").
  string proposer_agent_id = 2;

  // نوع القرار المطلوب
  enum DecisionType {
    TRADE_EXECUTION = 0;   // تنفيذ صفقة
    SYSTEM_SHUTDOWN = 1;   // إيقاف طارئ
    STRATEGY_CHANGE = 2;   // تغيير استراتيجية
    RISK_OVERRIDE = 3;     // تجاوز حدود المخاطر (يتطلب إجماعاً عالياً)
  }
  DecisionType type = 3;

  // تفاصيل الاقتراح (JSON Payload).
  string payload = 4;

  // الوقت المسموح للتصويت قبل إغلاق الجلسة (بالثواني).
  int32 timeout_seconds = 5;
}

message ProposalResponse {
  // معرف الاقتراح الفريد (Proposal ID).
  string proposal_id = 1;
  
  // حالة قبول الطلب (هل تم فتح باب التصويت؟).
  bool accepted = 2;
  
  // رسالة توضيحية.
  string status_message = 3;
}

// -----------------------------------------------------------------
// 3. رسائل التصويت (VOTE MESSAGES)
// -----------------------------------------------------------------

message VoteRequest {
  // معرف الاقتراح الذي نصوت عليه.
  string proposal_id = 1;

  // هوية الوكيل المصوت.
  string voter_agent_id = 2;

  // نوع الوكيل (يحدد وزن الصوت في النظام).
  enum AgentRole {
    OBSERVER = 0;          // مراقب (وزن 0)
    SENTIMENT_ANALYST = 1; // محلل مشاعر (وزن منخفض)
    QUANT_TRADER = 2;      // متداول كمي (وزن متوسط)
    RISK_MANAGER = 3;      // مدير مخاطر (وزن ثقيل - فيتو)
    SUPREME_HIVE = 4;      // العقل المدبر (وزن مطلق)
  }
  AgentRole role = 3;

  // قرار التصويت
  enum VoteChoice {
    ABSTAIN = 0;           // امتتاع
    APPROVE = 1;           // موافقة
    REJECT = 2;            // رفض
    VETO = 3;              // نقض (إلغاء العملية بالكامل)
  }
  VoteChoice choice = 4;

  // درجة الثقة في القرار (0.0 - 1.0).
  // يتم ضرب الوزن في الثقة لحساب القوة النهائية للصوت.
  float confidence_level = 5;

  // التبرير المنطقي (إجباري للأغراض الجنائية).
  // مثال: "أرفض لأن السيولة منخفضة جداً".
  string reasoning = 6;
}

message VoteAck {
  // هل تم تسجيل الصوت بنجاح؟
  bool recorded = 1;
  
  // الوزن المحتسب للصوت (للشفافية).
  float calculated_weight = 2;
}

// -----------------------------------------------------------------
// 4. رسائل النتيجة (VERDICT MESSAGES)
// -----------------------------------------------------------------

message VerdictRequest {
  string proposal_id = 1;
}

message VerdictResponse {
  string proposal_id = 1;

  // النتيجة النهائية
  enum Outcome {
    PENDING = 0;           // التصويت مستمر
    APPROVED = 1;          // تمت الموافقة بالأغلبية
    REJECTED = 2;          // تم الرفض
    TIED = 3;              // تعادل (يتطلب تدخل بشري أو إعادة تصويت)
    KILLED_BY_VETO = 4;    // تم القتل بواسطة الفيتو (Risk Manager)
  }
  Outcome outcome = 2;

  // النسبة المئوية للموافقة (Weighted Approval %).
  float approval_percentage = 3;

  // عدد المصوتين.
  int32 total_votes_cast = 4;

  // قائمة الوكلاء المعارضين (للمراجعة السريعة).
  repeated string dissenting_agents = 5;
}