# -*- coding: utf-8 -*-
"""
ALPHA SOVEREIGN - DECISION PIPELINE (THE ORCHESTRATOR)
=================================================================
Component: brain/core/pipeline.py
Core Responsibility: Ù‚Ø±Ø§Ø¡Ø© Ø§Ù„Ø§Ø³ØªØ±Ø§ØªÙŠØ¬ÙŠØ©ØŒ ØªØ´ØºÙŠÙ„ Ø§Ù„ÙˆÙƒÙ„Ø§Ø¡ØŒ ÙˆØªÙ†ÙÙŠØ° Ø§Ù„Ø­ÙƒÙ….
Forensic Features:
  - Dynamic Strategy Loading: Ù‚Ø±Ø§Ø¡Ø© Ù…Ù„Ù Ø§Ù„Ø¥Ø¹Ø¯Ø§Ø¯Ø§Øª ÙÙŠ ÙƒÙ„ Ø¯ÙˆØ±Ø© (Live Reload).
  - Selective Execution: ØªØ´ØºÙŠÙ„ Ø§Ù„ÙˆÙƒÙ„Ø§Ø¡ Ø§Ù„Ù…Ø­Ø¯Ø¯ÙŠÙ† ÙÙ‚Ø· Ù„ØªÙˆÙÙŠØ± Ø§Ù„Ù…ÙˆØ§Ø±Ø¯.
  - Voter Integration: ØªØ³Ù„ÙŠÙ… Ø§Ù„Ù†ØªØ§Ø¦Ø¬ Ù„Ù„Ù…Ø­ÙƒÙ…Ø© Ø§Ù„Ø¹Ù„ÙŠØ§ (WeightedVoter).
=================================================================
"""

import asyncio
import logging
import time
from typing import Dict, Any

# --- Ø§Ø³ØªÙŠØ±Ø§Ø¯ Ø§Ù„Ù…ÙƒÙˆÙ†Ø§Øª Ø§Ù„ØªÙŠ Ø¨Ù†ÙŠÙ†Ø§Ù‡Ø§ Ø³Ø§Ø¨Ù‚Ø§Ù‹ ---
from brain.memory.context_engine import ContextEngine
from brain.reasoning.cot_engine import CoTEngine
from brain.weighted_voter import WeightedVoter
from brain.core.strategy_manager import StrategyConfigManager

# --- Ø§Ø³ØªÙŠØ±Ø§Ø¯ Ø§Ù„ÙˆÙƒÙ„Ø§Ø¡ ---
from brain.agents.sentiment.processor import HybridSentimentProcessor
from brain.agents.quant.logic import QuantLogicCore
from brain.agents.risk.validator import ConstitutionalValidator

log = logging.getLogger("Alpha.Brain.Pipeline")

class BrainPipeline:
    """
    Ø®Ø· Ø¥Ù†ØªØ§Ø¬ Ø§Ù„Ù‚Ø±Ø§Ø±Ø§Øª Ø§Ù„Ø°ÙƒÙŠ.
    """

    def __init__(self, grpc_stub, pb_types):
        self.stub = grpc_stub         # Ù‚Ù†Ø§Ø© Ø§Ù„Ø§ØªØµØ§Ù„ Ø¨Ø§Ù„Ù…Ø­Ø±Ùƒ (Rust)
        self.pb = pb_types            # Ø£Ù†ÙˆØ§Ø¹ Ø§Ù„Ø±Ø³Ø§Ø¦Ù„ (Protobuf)
        
        log.info("ğŸ§  Initializing Cognitive Pipeline...")
        
        # 1. Ø§Ù„Ù…Ø¯ÙŠØ±ÙˆÙ† (Managers)
        self.config_mgr = StrategyConfigManager()
        self.voter = WeightedVoter()
        self.validator = ConstitutionalValidator()
        
        # 2. Ø§Ù„Ù…Ø­Ø±ÙƒØ§Øª (Engines)
        self.context_engine = ContextEngine()
        self.cot_engine = CoTEngine()
        
        # 3. Ø§Ù„ÙˆÙƒÙ„Ø§Ø¡ (Agents)
        self.quant_core = QuantLogicCore()
        self.sentiment = HybridSentimentProcessor() 

    async def initialize(self):
        """ØªØ­Ù…ÙŠÙ„ Ø§Ù„Ù†Ù…Ø§Ø°Ø¬ Ø§Ù„Ø«Ù‚ÙŠÙ„Ø© ÙÙŠ Ø§Ù„Ø®Ù„ÙÙŠØ©"""
        await self.sentiment.initialize()

    async def process_tick(self, symbol: str, market_data: Dict[str, Any]):
        """
        Ø¯ÙˆØ±Ø© Ø­ÙŠØ§Ø© Ø§Ù„Ù‚Ø±Ø§Ø± Ø§Ù„ÙˆØ§Ø­Ø¯Ø©.
        """
        start_time = time.perf_counter()
        
        # Ø£. ØªØ­Ù…ÙŠÙ„ Ù…Ù„Ù Ø§Ù„Ø§Ø³ØªØ±Ø§ØªÙŠØ¬ÙŠØ© (ØªØ­Ø¯ÙŠØ« ÙÙˆØ±ÙŠ)
        # Ù‡Ø°Ø§ ÙŠØ³Ù…Ø­ Ù„Ùƒ Ø¨ØªØºÙŠÙŠØ± Ø§Ù„Ø§Ø³ØªØ±Ø§ØªÙŠØ¬ÙŠØ© Ù…Ù† Ø§Ù„ÙˆØ§Ø¬Ù‡Ø© Ø¯ÙˆÙ† Ø¥ÙŠÙ‚Ø§Ù Ø§Ù„Ù†Ø¸Ø§Ù…
        profile = self.config_mgr.load_profile()
        modules_cfg = profile.get("modules", {})
        
        # Ø¨. Ø¨Ù†Ø§Ø¡ Ø§Ù„Ø³ÙŠØ§Ù‚ (Context)
        ctx = await self.context_engine.build_decision_context(
            symbol, market_data, None, None
        )
        
        # Ø¬. Ø§Ù„ØªÙ†ÙÙŠØ° Ø§Ù„Ù…ØªÙˆØ§Ø²ÙŠ Ø§Ù„Ø§Ù†ØªÙ‚Ø§Ø¦ÙŠ (Selective Parallel Execution)
        # Ù†Ù‚ÙˆÙ… Ø¨ØªØ´ØºÙŠÙ„ ÙÙ‚Ø· Ø§Ù„ÙˆÙƒÙ„Ø§Ø¡ Ø§Ù„Ø°ÙŠÙ† ØªÙ… ØªÙØ¹ÙŠÙ„Ù‡Ù… ÙÙŠ strategy_profile.json
        tasks = {}
        
        # 1. Ø§Ù„Ù…Ø³Ø§Ø± Ø§Ù„ÙƒÙ…ÙŠ (Quant)
        if modules_cfg.get("quant_analysis", {}).get("enabled", False):
            tasks["quant"] = asyncio.to_thread(self._run_quant, market_data)
            
        # 2. Ù…Ø³Ø§Ø± Ø§Ù„Ù…Ø´Ø§Ø¹Ø± (Sentiment)
        if modules_cfg.get("sentiment_analysis", {}).get("enabled", False):
            tasks["sentiment"] = self._run_sentiment(symbol)
            
        # 3. Ø§Ù„Ù…Ø³Ø§Ø± Ø§Ù„Ù‡Ø¬ÙŠÙ† (Hybrid AI)
        if modules_cfg.get("hybrid_reasoning", {}).get("enabled", False):
            tasks["hybrid"] = asyncio.to_thread(self._run_hybrid, symbol, ctx)
            
        # 4. Ø§Ù„Ù…Ø®Ø§Ø·Ø± (Ø¥Ø¬Ø¨Ø§Ø±ÙŠ Ø¯Ø§Ø¦Ù…Ø§Ù‹)
        tasks["risk"] = asyncio.to_thread(self._run_risk, market_data)

        # Ø¯. Ø§Ù†ØªØ¸Ø§Ø± Ø§Ù„Ù†ØªØ§Ø¦Ø¬
        results = await self._gather_results(tasks)
        
        # Ù‡Ù€. Ø§Ù„ØªØµÙˆÙŠØª ÙˆØ§Ù„Ø­ÙƒÙ… (The Judge)
        # Ù†Ø±Ø³Ù„ Ø§Ù„Ù†ØªØ§Ø¦Ø¬ Ø¥Ù„Ù‰ WeightedVoter Ù„ÙŠÙ‚Ø±Ø± Ø¨Ù†Ø§Ø¡Ù‹ Ø¹Ù„Ù‰ Ø§Ù„Ø£ÙˆØ²Ø§Ù†
        vote_receipt = self.voter.cast_vote(
            context_id=ctx.get("context_id", "UNKNOWN"),
            quant_signal=results.get("quant", {}),
            sentiment_signal=results.get("sentiment", {}),
            hybrid_signal=results.get("hybrid", {}),
            risk_signal=results.get("risk", {}),
            market_volatility=market_data.get("volatility", 0.0)
        )

        # Ùˆ. Ø§Ù„ØªÙ†ÙÙŠØ° (Execution)
        latency = (time.perf_counter() - start_time) * 1000
        
        if vote_receipt.final_verdict in ["BUY", "SELL"]:
            log.info(f"âš¡ [bold green]EXECUTE:[/bold green] {vote_receipt.final_verdict} {symbol} | Score: {vote_receipt.net_score:.2f} | {latency:.1f}ms")
            await self._dispatch_order(symbol, vote_receipt, market_data['price'])
        else:
            log.info(f"ğŸ’¤ HOLD {symbol} | Score: {vote_receipt.net_score:.2f} | Reason: {vote_receipt.veto_reason or 'Weak Signal'}")

    # --- Ø£ØºÙ„ÙØ© Ø§Ù„ØªØ´ØºÙŠÙ„ (Execution Wrappers) ---

    def _run_quant(self, data):
        """ØªØ´ØºÙŠÙ„ Ø§Ù„Ù…Ù†Ø·Ù‚ Ø§Ù„ÙƒÙ…ÙŠ"""
        # (Ù‡Ù†Ø§ Ù†Ø³ØªØ®Ø¯Ù… QuantLogicCore Ø§Ù„Ø°ÙŠ ÙƒØªØ¨Ù†Ø§Ù‡ Ø³Ø§Ø¨Ù‚Ø§Ù‹)
        # Ù…Ø­Ø§ÙƒØ§Ø© Ù„Ø­ÙŠÙ† Ø±Ø¨Ø· Ø§Ù„Ø¨ÙŠØ§Ù†Ø§Øª Ø§Ù„Ø­Ù‚ÙŠÙ‚ÙŠØ©
        ofi = self.quant_core.calculate_ofi([], [], 10) 
        # Ù…Ù†Ø·Ù‚ Ø¨Ø³ÙŠØ· Ù„Ù„ØªØ¬Ø±Ø¨Ø©: Ø¥Ø°Ø§ Ø§Ù„Ø³Ø¹Ø± Ù…Ø±ØªÙØ¹ Ù†Ø¨ÙŠØ¹ØŒ Ù…Ù†Ø®ÙØ¶ Ù†Ø´ØªØ±ÙŠ (Mean Reversion)
        rsi_sim = 50 + (data['volatility'] * 100) # Ù…Ø­Ø§ÙƒØ§Ø©
        signal = "NEUTRAL"
        if rsi_sim > 70: signal = "SELL"
        elif rsi_sim < 30: signal = "BUY"
        return {"signal": signal, "confidence": 0.8}

    async def _run_sentiment(self, symbol):
        """ØªØ´ØºÙŠÙ„ ØªØ­Ù„ÙŠÙ„ Ø§Ù„Ù…Ø´Ø§Ø¹Ø±"""
        # ÙŠØ³ØªØ®Ø¯Ù… HybridSentimentProcessor (Auto Mode)
        return await self.sentiment.analyze(f"{symbol} market update", depth="AUTO")

    def _run_hybrid(self, symbol, ctx):
        """ØªØ´ØºÙŠÙ„ Ø§Ù„ØªÙÙƒÙŠØ± Ø§Ù„Ù…ØªØ³Ù„Ø³Ù„"""
        trace = self.cot_engine.deliberate(f"Trade {symbol}", {"raw": ctx}, "hash")
        return {"final_verdict": trace.final_verdict, "final_score": trace.final_score}

    def _run_risk(self, data):
        """ØªØ´ØºÙŠÙ„ Ù…Ø¯Ù‚Ù‚ Ø§Ù„Ù…Ø®Ø§Ø·Ø±"""
        return {"status": "ALLOW", "reason": "Within limits"}

    async def _gather_results(self, tasks: Dict) -> Dict:
        """ØªØ¬Ù…ÙŠØ¹ Ù†ØªØ§Ø¦Ø¬ Ø§Ù„Ù…Ù‡Ø§Ù… ØºÙŠØ± Ø§Ù„Ù…ØªØ²Ø§Ù…Ù†Ø© Ø¨Ø£Ù…Ø§Ù†"""
        results = {}
        if not tasks: return results
        
        # ØªØ´ØºÙŠÙ„ Ø§Ù„Ø¬Ù…ÙŠØ¹ ÙÙŠ ÙˆÙ‚Øª ÙˆØ§Ø­Ø¯
        keys = list(tasks.keys())
        coroutines = list(tasks.values())
        
        completed = await asyncio.gather(*coroutines, return_exceptions=True)
        
        for k, res in zip(keys, completed):
            if isinstance(res, Exception):
                log.error(f"âŒ Task {k} Crashed: {res}")
                results[k] = {}
            else:
                results[k] = res
        return results

    async def _dispatch_order(self, symbol, receipt, price):
        """Ø¥Ø±Ø³Ø§Ù„ Ø§Ù„Ø£Ù…Ø± Ù„Ù„Ù…Ø­Ø±Ùƒ Ø¹Ø¨Ø± gRPC"""
        side_int = 0 if receipt.final_verdict == "BUY" else 1
        
        # 1. Ø§Ù„ØªØ¯Ù‚ÙŠÙ‚ Ø§Ù„Ø¯Ø³ØªÙˆØ±ÙŠ (Constitutional Check)
        order_req = {"symbol": symbol, "side": side_int, "quantity": 0.01, "price": price, "type": "LIMIT"}
        validity = self.validator.validate_order(order_req, {"open_orders": []})
        
        if not validity['valid']:
            log.warning(f"ğŸ›¡ï¸ Constitutional Veto: {validity['reason']}")
            return

        # 2. Ø§Ù„Ø¥Ø±Ø³Ø§Ù„
        try:
            req = self.pb.ExecuteOrderRequest(
                order_id=receipt.id,
                strategy_id="STRAT_PIPELINE_V1",
                symbol=symbol,
                exchange="BINANCE",
                side=side_int,
                order_type=1,
                quantity=str(order_req['quantity']),
                price=str(price)
            )
            await self.stub.ExecuteOrder(req)
        except Exception as e:
            log.error(f"Execution API Error: {e}")